전체임플란트 css 추가수정오나료

--- a/src/main/webapp/css/implant/fullImplants.css
+++ b/src/main/webapp/css/implant/fullImplants.css
@@ -191,8 +191,8 @@
 }
 
 .section05 {
-    margin-top: 172px;
-    height: 700px;
+    margin-top: 163px;
+    height: 637px;
 }
 
 .section05:before {
@@ -215,13 +215,15 @@
 .section05 h2 {
     font-size: 32px;
     font-weight: bold;
-    margin-bottom: 35px;
+    margin-bottom: 29px;
+    letter-spacing: -2px;
 }
 
 .section05 p {
     line-height: 1.6;
     font-size: 15px;
-    margin-bottom: 95px;
+    margin-bottom: 62px;
+    letter-spacing: -1px;
 }
 
 .section05 p span {
@@ -235,7 +237,7 @@
 .section05 li {
     width: 25%;
     float: left;
-    padding-top: 131px;
+    padding-top: 124px;
 }
 
 .section05 .img01 {
