~충치.치주,신경치료까지 수정완료

--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -103,6 +103,7 @@ section {
     color: #222;
     line-height: 27px;
     letter-spacing: -1px;
+    padding-top: 18px;
 }
 
 .section-text strong {
