--- a/src/main/webapp/css/orthodontics/growthReriodOrthodontics.css
+++ b/src/main/webapp/css/orthodontics/growthReriodOrthodontics.css
@@ -1,5 +1,5 @@
 .section01 {
-    margin-top: 154px;
+    margin-top: 99px;
 }
 
 .section01 .text, .section01 .bg .max-layout-width {
@@ -9,7 +9,7 @@
 }
 
 .section01 .text > div, .section01 .bg .max-layout-width > div {
-    padding-left: 86px;
+    padding-left: 73px;
 }
 
 .section01 .bg .max-layout-width > div {
@@ -23,10 +23,10 @@
 }
 
 .section01 .bg {
-    margin-top: 50px;
+    margin-top: 43px;
     background: #f5f5f5;
-    padding-top: 50px;
-    padding-bottom: 90px;
+    padding-top: 31px;
+    padding-bottom: 48px;
 }
 
 .section01 .section-text {
@@ -49,7 +49,7 @@
 }
 
 .section02 {
-    margin-top: 90px;
+    margin-top: 79px;
 }
 
 .section02 .max-layout-width .text {
@@ -63,7 +63,7 @@
 
 .section02 .image_box_right {
     max-width: 1268px;
-    height: 563px;
+    height: 485px;
     width: 50%;
     z-index: 10;
 }
@@ -76,8 +76,9 @@
     position: relative;
     line-height: 1.3;
     margin-bottom: 4px;
-    letter-spacing: -1px;
+    letter-spacing: -3px;
     text-align: right;
+    padding-right: 20px;
 }
 
 .section02 .section-text {
@@ -87,15 +88,16 @@
     text-align: right;
     padding-left: 47px;
     padding-top: 20px;
+    padding-right: 21px;
 }
 
 .section02 .section-text:before {
     content: '';
     position: absolute;
     width: 3px;
-    height: 103px;
+    height: 67px;
     background: #7f6a57;
-    top: 105px;
+    top: 97px;
     right: 0;
 }
 
@@ -103,9 +105,9 @@
     background: #f5f5f5;
     width: 64.65%;
     position: absolute;
-    height: 427px;
+    height: 304px;
     left: 0px;
-    bottom: -98px;
+    bottom: -40px;
 }
 
 .section02 .max-layout-width {
@@ -114,7 +116,7 @@
 }
 
 .section02 ul {
-    padding-top: 160px;
+    padding-top: 95px;
     box-sizing: border-box;
 }
 
@@ -131,16 +133,16 @@
 }
 
 .section02 .text li p {
-    line-height: 1.7;
+    line-height: 1.6;
     color: #222;
-    letter-spacing: -1px;
+    letter-spacing: -1.2px;
 }
 
 .section02 .text .img01 {
     background: url(../../images/sub/orthodontics/grow/growth_icon01.png) no-repeat left top;
     padding-top: 27px;
     padding-bottom: 27px;
-    margin-bottom: 40px;
+    margin-bottom: 25px;
     background-position-x: 10px;
     background-position-y: 8px;
 }
@@ -149,7 +151,7 @@
     background: url(../../images/sub/orthodontics/grow/growth_icon02.png) no-repeat left top;
     padding-top: 27px;
     padding-bottom: 27px;
-    margin-bottom: 40px;
+    margin-bottom: 25px;
     background-position: 0 9px;
 }
 
@@ -167,7 +169,7 @@
 }
 
 .section04 {
-    margin-top: 100px;
+    margin-top: 47px;
 }
 
 .section04 .max-layout-width .text {
@@ -191,12 +193,12 @@
 }
 
 .section04 .section-title {
-    padding-top: 100px;
+    padding-top: 87px;
     position: relative;
     line-height: 1.3;
-    margin-bottom: 214px;
+    margin-bottom: 97px;
     padding-left: 60px;
-    letter-spacing: -1px;
+    letter-spacing: -3px;
 }
 
 .section04 .max-layout-width .text > div:before {
@@ -213,24 +215,25 @@
     word-break: keep-all;
     line-height: 1.7;
     position: relative;
+    letter-spacing: -1.2px;
 }
 
 .section04 .section-text:before {
     content: '';
     position: absolute;
     width: 3px;
-    height: 103px;
+    height: 72px;
     background: #7f6a57;
-    top: -145px;
+    top: -75px;
 }
 
 .section04 .bg {
     background: #f5f5f5;
     width: 64.65%;
     position: absolute;
-    height: 335px;
+    height: 281px;
     right: 0px;
-    bottom: -80px;
+    bottom: -61px;
 }
 
 .section04 .max-layout-width {
@@ -277,17 +280,18 @@
 }
 
 .section06 {
-    margin-top: 147px;
+    margin-top: 70px;
     text-align: center;
-    margin-bottom: 206px;
+    margin-bottom: 81px;
 }
 
 .section06 .section-title {
-    line-height: 1.3
+    line-height: 1.3;
+    margin-bottom: -4px;
 }
 
 .section06 ul {
-    margin-top: 83px;
+    margin-top: 42px;
     margin-left: -3.07%;
     overflow: hidden;
 }
@@ -308,7 +312,7 @@
 }
 
 .section06 ul li p {
-    height: 113px;
+    height: 77px;
     background: #9b8b7e;
     padding-left: 42px;
     padding-right: 35px;
@@ -317,19 +321,21 @@
 }
 
 .section06 ul li p span:first-child {
-    padding-top: 42px;
+    padding-top: 27px;
     display: block;
-    font-size: 33px;
+    font-size: 23px;
     color: #fff;
     font-weight: bold;
+    letter-spacing: -1px;
 }
 
 .section06 ul li p span.view {
     position: absolute;
     right: 78px;
-    top: 9px;
+    top: 3px;
     font-size: 19px;
     color: #fff;
+    letter-spacing: 1px;
 }
 
 .section06 ul li p span.view:after {
@@ -343,19 +349,19 @@
 }
 
 .section03 {
-    margin-top: 170px;
+    margin-top: 112px;
 }
 
 .section03 .section-title {
     line-height: 1.3;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     text-align: center;
 }
 
 .section03 .section-text {
     line-height: 1.7;
     word-break: keep-all;
-    margin-bottom: 50px;
+    margin-bottom: 42px;
     text-align: center;
 }
 
@@ -384,5 +390,5 @@
 }
 
 .section07 {
-    margin-top: 222px;
+    margin-top: 150px;
 }
