--- a/src/main/webapp/css/orthodontics/malocculusionOrthodontics.css
+++ b/src/main/webapp/css/orthodontics/malocculusionOrthodontics.css
@@ -1,5 +1,5 @@
 .section01 {
-    margin-top: 164px;
+    margin-top: 110px;
 }
 
 .section01 .text, .section01 .bg .max-layout-width {
@@ -9,7 +9,7 @@
 }
 
 .section01 .text > div, .section01 .bg .max-layout-width > div {
-    padding-left: 86px;
+    padding-left: 73px;
 }
 
 .section01 .bg .max-layout-width > div {
@@ -23,10 +23,10 @@
 }
 
 .section01 .bg {
-    margin-top: 50px;
+    margin-top: 43px;
     background: #f5f5f5;
-    padding-top: 50px;
-    padding-bottom: 110px;
+    padding-top: 24px;
+    padding-bottom: 92px;
 }
 
 .section01 .section-text {
@@ -34,7 +34,7 @@
 }
 
 .section01 .section-text:first-child {
-    margin-bottom: 43px;
+    margin-bottom: 14px;
 }
 
 .section01 .image_box_left {
@@ -51,8 +51,8 @@
 
 
 .section05 {
-    height: 431px;
-    margin-top: 150px;
+    height: 369px;
+    margin-top: 111px;
 }
 
 .section05 .max-layout-width {
@@ -63,27 +63,28 @@
 }
 
 .section05 .max-layout-width .text {
-    padding-top: 134px;
+    padding-top: 99px;
     text-align: center;
 }
 
 .tab-contents3 .section05 .max-layout-width .text {
-    padding-top: 82px;
+    padding-top: 74px;
 }
 
 
 .tab-contents4 .section05 .max-layout-width .text {
-    padding-top: 100px;
+    padding-top: 88px;
 }
 
 .tab-contents5 .section05 .max-layout-width .text {
-    padding-top: 95px;
+    padding-top: 87px;
 }
 
 .section05 .max-layout-width .text h2 {
-    line-height: 1.4;
-    margin-bottom: 40px;
-    font-size: 39px;
+    line-height: 1.3;
+    margin-bottom: 32px;
+    font-size: 38px;
+    letter-spacing: -2px;
 }
 
 .section05 .max-layout-width .text p {
@@ -92,6 +93,7 @@
     word-break: keep-all;
     margin: 0 auto;
     line-height: 1.7;
+    letter-spacing: -1px;
 }
 
 .tab-contents2 .section05 .max-layout-width .text p {
@@ -99,7 +101,7 @@
 }
 
 .section05 .max-layout-width .text p.star {
-    margin-top: 40px;
+    margin-top: 16px;
 }
 
 .section05 .max-layout-width .text span {
@@ -140,13 +142,13 @@
 
 
 .section04 {
-    margin-top: 140px;
+    margin-top: 48px;
 }
 
 .section04 .section-title {
     line-height: 1.3;
-    margin-bottom: 119px;
-    padding-top: 30px;
+    margin-bottom: 35px;
+    padding-top: 80px;
 }
 
 .section04 .section-text {
@@ -164,14 +166,29 @@
 .section04 .img {
     background: url(../../images/sub/orthodontics/malocculusion/malocclusion23.jpg) no-repeat center;
 }
+p.img.toothimg01{
+    background: url(../../images/sub/orthodontics/malocculusion/malocclusion03.jpg) no-repeat center;
+}
+p.img.toothimg02{
+    background: url(../../images/sub/orthodontics/malocculusion/malocclusion18.jpg) no-repeat center;
+}
+p.img.toothimg03{
+    background: url(../../images/sub/orthodontics/malocculusion/malocclusion16.jpg) no-repeat center;
+}
+p.img.toothimg04{
+    background: url(../../images/sub/orthodontics/malocculusion/malocclusion09.jpg) no-repeat center;
+}
+p.img.toothimg05{
+    background: url(../../images/sub/orthodontics/malocculusion/malocclusion23.jpg) no-repeat center;
+}
 
 .section04 .bg {
-    background: #f5f5f5;
+    /* background: #f5f5f5; */
     width: 55.29%;
     position: absolute;
-    height: 343px;
+    height: 267px;
     right: 0px;
-    bottom: -60px;
+    bottom: -31px;
 }
 
 .section04 .max-layout-width {
@@ -182,12 +199,13 @@
 .section04 .pager {
     font-size: 16px;
     color: #222;
-    padding: 11px 0;
+    padding: 9px 0;
     position: relative;
     padding-left: 40px;
     display: inline-block;
     font-weight: bold;
     position: relative;
+    letter-spacing: -1px;
 }
 
 .tab-contents5 .section04 .pager:before {
@@ -232,9 +250,9 @@
 }
 
 .section07 {
-    margin-top: 147px;
+    margin-top: 82px;
     text-align: center;
-    margin-bottom: 206px;
+    margin-bottom: 90px;
 }
 
 .section07 .section-title {
@@ -242,7 +260,7 @@
 }
 
 .section07 ul {
-    margin-top: 83px;
+    margin-top: 44px;
     margin-left: -3.07%;
     overflow: hidden;
 }
@@ -263,7 +281,7 @@
 }
 
 .section07 ul li p {
-    height: 113px;
+    height: 77px;
     background: #9b8b7e;
     padding-left: 42px;
     padding-right: 35px;
@@ -272,19 +290,21 @@
 }
 
 .section07 ul li p span:first-child {
-    padding-top: 42px;
+    padding-top: 25px;
     display: block;
-    font-size: 33px;
+    font-size: 23px;
     color: #fff;
     font-weight: bold;
+    letter-spacing: -1px;
 }
 
 .section07 ul li p span.view {
     position: absolute;
     right: 78px;
-    top: 9px;
+    top: 4px;
     font-size: 19px;
     color: #fff;
+    letter-spacing: 1px;
 }
 
 .section07 ul li p span.view:after {
@@ -299,7 +319,7 @@
 
 .section02 {
     text-align: center;
-    padding-top: 100px;
+    padding-top: 78px;
 }
 
 .section02 .section-title {
@@ -315,17 +335,18 @@
     width: 23%;
     margin-left: 2%;
     float: left;
-    padding-top: 54px;
+    padding-top: 40px;
     background: #f3f3f3;
-    padding-bottom: 37px;
+    padding-bottom: 36px;
 }
 
 .section02 li p {
-    line-height: 1.7;
+    line-height: 1.55;
     font-size: 17px;
     font-weight: bold;
     color: #222;
     margin-top: 13px;
+    letter-spacing: -1px;
 }
 
 .section02 .img {
@@ -354,9 +375,9 @@
 }
 
 .section03 {
-    padding: 50px 0 80px 0;
+    padding: 69px 0 63px 0;
     background: #f3f3f3;
-    margin-top: 70px;
+    margin-top: 75px;
 }
 
 .section03 .section-title {
@@ -422,11 +443,13 @@
     font-size: 30px;
     font-weight: bold;
     text-align: center;
+    letter-spacing: -2px;
 }
 
 .section03 .max-layout-width .con .img-box p {
     text-align: center;
-    line-height: 1.7;
+    line-height: 1.65;
+    letter-spacing: -1px;
 }
 
 .section03 .text {
@@ -439,7 +462,7 @@
 }
 
 .section03 .text li {
-    height: 110px;
+    height: 107px;
     max-width: 590px;
     width: 100%;
     line-height: 110px;
@@ -464,19 +487,21 @@
 }
 
 .section03 .text li p {
-    font-size: 16px;
+    font-size: 17px;
+    letter-spacing: -1.3px;
 }
 
 .section03 .text li span {
-    font-size: 22px;
+    font-size: 24px;
     font-weight: bold;
     margin-right: 24px;
     display: inline-block;
     float: left;
+    letter-spacing: -1.5px;
 }
 
 .section06 {
-    margin-top: 100px;
+    margin-top: 77px;
 }
 
 .section06 .section-title {
@@ -489,6 +514,7 @@
     width: 50%;
     word-break: keep-all;
     margin-bottom: 50px;
+    letter-spacing: -1.2px;
 }
 
 .section06 ul {
@@ -510,7 +536,8 @@
 .section06 ul li p {
     text-align: center;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 19px;
+    letter-spacing: -1.5px;
 }
 
 .tab-contents {
@@ -522,8 +549,8 @@
 }
 
 .section08 {
-    margin-top: 100px;
-    padding-bottom: 150px;
+    margin-top: 68px;
+    padding-bottom: 133px;
 }
 
 .section08 .max-layout-width {
@@ -539,8 +566,8 @@
 
 .section08 .section-title {
     line-height: 1.3;
-    margin-bottom: 30px;
-    padding-top: 60px;
+    margin-bottom: 18px;
+    padding-top: 66px;
 }
 
 
@@ -556,20 +583,31 @@
     background: url(../../images/sub/orthodontics/malocculusion/malocclusion24.jpg) no-repeat center;
 }
 
+
+p.img.toothimg06 {
+    background: url(../../images/sub/orthodontics/malocculusion/malocclusion11.jpg) no-repeat top center;
+}
+
+p.img.toothimg07 .img {
+    background: url(../../images/sub/orthodontics/malocculusion/malocclusion24.jpg) no-repeat top center;
+}
+
+
 .section09 {
     background: #f5f5f5;
-    padding-top: 90px;
-    padding-bottom: 70px;
+    padding-top: 65px;
+    padding-bottom: 59px;
 }
 
 .section09 h2 {
     font-size: 34px;
+    letter-spacing: -2px;
 }
 
 .section09 ul {
     overflow: hidden;
     margin-left: -1%;
-    margin-top: 50px;
+    margin-top: 36px;
 }
 
 .section09 li {
@@ -579,12 +617,13 @@
 }
 
 .section09 li p {
-    line-height: 1.7;
+    line-height: 1.6;
     font-weight: bold;
     text-align: center;
-    margin-top: 40px;
+    margin-top: 27px;
+    letter-spacing: -1.3px;
 }
 
 .section10 {
-    margin-top: 120px;
+    margin-top: 79px;
 }
