기능수정: CSS 수정
- 마우스오버시 나오는 카테고리를 상단 카테고리 with값에 맞춰 변경 / 텍스트 자간 -1px 지정 / 슬라이드 속도 조금만 더 빠르게
- 슬라이드부분 with가 길어져 가로 스크롤 생기는데 체크필요 (네비게이션임플란트,치아교정 등 치료단계관련부분)
- 원데이 임플란트 & 전체 임플란트부분에 스크롤내릴때 배경나오는부분 뭔가 나오는속도가 안맞는거같은데 체크부탁드려용
- 메인에 "소중한 치아~" "편안하고 정확한~" 텍스트 잘리는것 수정하기
- 메인 제일하단 "미소원치과 둘러보기" 에서 박스로되어진거 미소원치과 실내사진 자세히보러가기 이미지랑 같이 슬라이드 되지않고 고정되도록 하기
(자동슬라이드)
- 스크롤내릴때 section별로 나오게하는거 제일먼저 메인만이라듀 적용부탁드려욥
- 전체 임플란트에서 중앙 정렬

--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -15,8 +15,8 @@
     font-style: normal;
     font-weight: 700;
     src: url('../fonts/nanum_myeongjo/NanumMyeongjoBold.eot'); /* IE9 Compat Modes */
-    url('../fonts/nanum_myeongjo/NanumMyeongjoBold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/nanum_myeongjo/NanumMyeongjoBold.woff') format('woff'), /* Super Modern Browsers */
+url('../fonts/nanum_myeongjo/NanumMyeongjoBold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+url('../fonts/nanum_myeongjo/NanumMyeongjoBold.woff') format('woff'), /* Super Modern Browsers */
 }
 
 @font-face {
@@ -24,8 +24,8 @@
     font-style: normal;
     font-weight: 400;
     src: url('../fonts/nanum_myeongjo/NanumMyeongjo.eot'); /* IE9 Compat Modes */
-    url('../fonts/nanum_myeongjo/NanumMyeongjo.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../fonts/nanum_myeongjo/NanumMyeongjo.woff') format('woff'), /* Super Modern Browsers */
+url('../fonts/nanum_myeongjo/NanumMyeongjo.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+url('../fonts/nanum_myeongjo/NanumMyeongjo.woff') format('woff'), /* Super Modern Browsers */
 }
 
 * {
@@ -35,6 +35,7 @@
 body {
     width: 100%;
     height: 100%;
+    overflow-x: hidden;
 }
 
 section {
