--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -457,6 +457,7 @@ body {
     font-size: 17px;
     letter-spacing: -1.5px;
     /* font-weight: 600; */
+    line-height: 0.8;
 }
 
 .section06 .bx-wrapper {
@@ -520,6 +521,7 @@ body {
     font-size: 16px;
     color: #222;
     letter-spacing: -1.3px;
+    line-height: 0.8;
 }
 
 .slider-pagenation {
@@ -704,7 +706,7 @@ body .section07 .bx-pager-link span + span {
     letter-spacing: -1px;
 }
 
-.tour-slide .slide-text {
+.section09 .slide-text {
     width: 303px;
     height: 181px;
     position: absolute;
@@ -716,11 +718,11 @@ body .section07 .bx-pager-link span + span {
     padding-bottom: 52px;
 }
 
-.tour-slide .slide-text p + p {
+.section09 .slide-text p + p {
     position: relative;
 }
 
-.tour-slide .slide-text p + p:after {
+.section09 .slide-text p + p:after {
     background: url(../images/main/arrow02.png);
     content: '';
     position: absolute;
@@ -730,7 +732,7 @@ body .section07 .bx-pager-link span + span {
     height: 10px;
 }
 
-.tour-slide .slide-text a {
+.section09 .slide-text a {
     display: block;
     width: 100%;
     height: 100%;
@@ -740,13 +742,13 @@ body .section07 .bx-pager-link span + span {
     background: #7e6956;
 }
 
-.tour-slide .slide-text p {
+.section09 .slide-text p {
     color: #fff;
     font-size: 17px;
     letter-spacing: -1px;
 }
 
-.tour-slide .slide-text p:first-child {
+.section09 .slide-text p:first-child {
     margin-bottom: 11px;
 }
 
