스케일링까지 모든 서브페이지 수정완료, css,jsp,image

--- a/src/main/webapp/css/tooth/scaling.css
+++ b/src/main/webapp/css/tooth/scaling.css
@@ -1,5 +1,5 @@
 .section01 {
-    margin-top: 154px;
+    margin-top: 100px;
 }
 
 .section01 .text, .section01 .bg .max-layout-width {
@@ -9,7 +9,7 @@
 }
 
 .section01 .text > div, .section01 .bg .max-layout-width > div {
-    padding-left: 86px;
+    padding-left: 73px;
 }
 
 .section01 .bg .max-layout-width > div {
@@ -23,10 +23,10 @@
 }
 
 .section01 .bg {
-    margin-top: 50px;
+    margin-top: 43px;
     background: #f5f5f5;
-    padding-top: 50px;
-    padding-bottom: 150px;
+    padding-top: 24px;
+    padding-bottom: 155px;
 }
 
 .section01 .section-text {
@@ -34,7 +34,7 @@
 }
 
 .section01 .section-text:first-child {
-    margin-bottom: 43px;
+    margin-bottom: 8px;
 }
 
 .section01 .image_box_left {
@@ -51,7 +51,7 @@
 
 .section02 {
     text-align: center;
-    padding-top: 100px;
+    padding-top: 80px;
 }
 
 .section02 .section-title {
@@ -65,8 +65,8 @@
 .section02 li {
     width: 25%;
     float: left;
-    padding-top: 54px;
-    padding-bottom: 37px;
+    padding-top: 25px;
+    padding-bottom: 31px;
 }
 
 .section02 li {
@@ -79,11 +79,12 @@
 }
 
 .section02 li p {
-    line-height: 1.7;
+    line-height: 1.5;
     font-size: 17px;
     font-weight: bold;
     color: #222;
     margin-top: 13px;
+    letter-spacing: -1px;
 }
 
 .section02 .img {
@@ -108,7 +109,7 @@
 }
 
 .section03 {
-    margin-top: 100px;
+    margin-top: 66px;
 }
 
 .section03 .max-layout-width .text {
@@ -122,10 +123,10 @@
 
 .section03 .image_box_right {
     max-width: 1276px;
-    height: 455px;
+    height: 394px;
     width: 50%;
     z-index: 10;
-    top: 100px;
+    top: 7px;
 }
 
 .section03 .image_box_right .img {
@@ -133,12 +134,12 @@
 }
 
 .section03 .section-title {
-    padding-top: 100px;
+    padding-top: 87px;
     position: relative;
     line-height: 1.3;
-    margin-bottom: 174px;
+    margin-bottom: 92px;
     padding-left: 74px;
-    letter-spacing: -1px;
+    /* letter-spacing: -1px; */
 }
 
 .section03 .max-layout-width .text > div:before {
@@ -161,9 +162,9 @@
     content: '';
     position: absolute;
     width: 3px;
-    height: 103px;
+    height: 76px;
     background: #7f6a57;
-    top: -141px;
+    top: -76px;
     right: 0;
 }
 
@@ -171,9 +172,9 @@
     background: #f5f5f5;
     width: 64.65%;
     position: absolute;
-    height: 305px;
+    height: 217px;
     left: 0px;
-    bottom: -100px;
+    bottom: -54px;
 }
 
 .section03 .max-layout-width {
@@ -222,13 +223,13 @@
 }
 
 .section04 {
-    margin-top: 190px;
+    margin-top: 134px;
 }
 
 .section04 .section-title {
     line-height: 1.3;
-    margin-bottom: 119px;
-    padding-top: 30px;
+    margin-bottom: 81px;
+    padding-top: 16px;
 }
 
 .section04 .section-text {
@@ -238,7 +239,7 @@
 
 .section04 .image_box_left {
     max-width: 1315px;
-    height: 433px;
+    height: 325px;
     width: 51.52%;
     z-index: 1;
 }
@@ -250,9 +251,9 @@
 .section04 .bg {
     width: 55.29%;
     position: absolute;
-    height: 343px;
+    height: 286px;
     right: 0px;
-    bottom: -60px;
+    bottom: -42px;
     background: #f5f5f5;
 }
 
@@ -264,12 +265,13 @@
 .section04 .pager {
     font-size: 16px;
     color: #222;
-    padding: 11px 0;
+    padding: 9px 0;
     position: relative;
     padding-left: 40px;
     display: inline-block;
     font-weight: bold;
     /* cursor: pointer; */
+    letter-spacing: -1px;
 }
 
 .section04 .pager span {
@@ -304,8 +306,8 @@
 }
 
 .section05 {
-    height: 431px;
-    margin-top: 100px;
+    height: 333px;
+    margin-top: 119px;
 }
 
 .section05 .max-layout-width {
@@ -316,18 +318,20 @@
 }
 
 .section05 .max-layout-width .text {
-    padding-top: 114px;
+    padding-top: 79px;
 }
 
 .section05 .max-layout-width .text h2 {
     line-height: 1.4;
-    margin-bottom: 50px;
-    font-size: 39px;
+    margin-bottom: 28px;
+    font-size: 36px;
+    letter-spacing: -2.5px;
 }
 
 .section05 .max-layout-width .text p {
     font-size: 17px;
     line-height: 1.7;
+    letter-spacing: -1px;
 }
 
 .section05 .max-layout-width .text span {
@@ -345,25 +349,25 @@
 }
 
 .section06 {
-    padding-top: 190px;
+    padding-top: 86px;
     background: #f5f5f5;
-    padding-bottom: 155px;
+    padding-bottom: 96px;
 }
 
 .section06 .section-title {
     line-height: 1.3;
-    margin-bottom: 49px;
-    font-size: 36px;
+    margin-bottom: 6px;
+    font-size: 35px;
 }
 
 .section06 .section-text {
     line-height: 1.7;
-    margin-bottom: 71px;
+    margin-bottom: 29px;
 }
 
 .section06 .image_box_left {
     max-width: 1315px;
-    height: 433px;
+    height: 380px;
     width: 50%;
     z-index: 1;
 }
@@ -388,11 +392,12 @@
 .section06 .pager {
     font-size: 16px;
     color: #222;
-    padding: 11px 0;
+    padding: 8px 0;
     position: relative;
-    padding-left: 40px;
+    padding-left: 29px;
     display: inline-block;
     /* cursor: pointer; */
+    letter-spacing: -1px;
 }
 
 
@@ -436,12 +441,13 @@
 
 .section06 .text > div {
     padding-left: 54px;
+    padding-top: 19px;
 }
 
 .section09 {
-    margin-top: 147px;
+    margin-top: 65px;
     text-align: center;
-    margin-bottom: 206px;
+    margin-bottom: 85px;
 }
 
 .section09 .section-title {
@@ -449,7 +455,7 @@
 }
 
 .section09 ul {
-    margin-top: 83px;
+    margin-top: 39px;
     margin-left: -3.07%;
     overflow: hidden;
 }
@@ -470,7 +476,7 @@
 }
 
 .section09 ul li p {
-    height: 113px;
+    height: 77px;
     background: #9b8b7e;
     padding-left: 42px;
     padding-right: 35px;
@@ -479,19 +485,21 @@
 }
 
 .section09 ul li p span:first-child {
-    padding-top: 42px;
+    padding-top: 25px;
     display: block;
-    font-size: 33px;
+    font-size: 23px;
     color: #fff;
     font-weight: bold;
+    letter-spacing: -1px;
 }
 
 .section09 ul li p span.view {
     position: absolute;
     right: 78px;
-    top: 9px;
+    top: 4px;
     font-size: 19px;
     color: #fff;
+    letter-spacing: 1px;
 }
 
 .section09 ul li p span.view:after {
@@ -505,10 +513,35 @@
 }
 
 .text-slider {
-    margin-top: 112px;
-    padding-bottom: 41px;
+    /* margin-top: 112px; */
+    /* padding-bottom: 41px; */
 }
 
 .section08 {
-    margin-top: 135px;
+    margin-top: 77px;
+}
+
+.text-slider {
+    margin-top: 70px;
+    /* padding-bottom: 34px; */
+}
+
+.text-slider .section-text {
+    margin-bottom: 45px;
+}
+
+
+.text-slider .slick-slide .text p {
+    line-height: 1.6;
+    width: 324px;
+    word-break: keep-all;
+    letter-spacing:-1px;
+}
+
+.text-slider .slick-slide .text h2 {
+    font-size: 31px;
+    line-height: 1.35;
+    margin-bottom: 55px;
+    color: #222;
+    letter-spacing: -1.5px;
 }
