--- a/src/main/webapp/css/tooth/aesthetic.css
+++ b/src/main/webapp/css/tooth/aesthetic.css
@@ -260,7 +260,7 @@
     line-height: 1.3;
     margin-bottom: 84px;
     padding-left: 94px;
-    letter-spacing: -1px;
+    /* letter-spacing: -1px; */
 }
 
 .section05 .max-layout-width .text > div:before {
@@ -277,6 +277,7 @@
     line-height: 1.7;
     position: relative;
     text-align: right;
+    letter-spacing: -1.5px;
 }
 
 .section05 .section-text:before {
@@ -591,7 +592,7 @@ p.img.allceramic{
     color: #222;
     padding: 7px 0;
     position: relative;
-    padding-left: 40px;
+    padding-left: 31px;
     display: inline-block;
     font-weight: bold;
     /* cursor: pointer; */
@@ -649,7 +650,7 @@ p.img.allceramic{
     text-align: center;
     font-size: 36px;
     margin-bottom: 51px;
-    letter-spacing: -2px;
+    letter-spacing: -3px;
 }
 
 .table-middle {
