--- a/src/main/webapp/css/tooth/wisdom.css
+++ b/src/main/webapp/css/tooth/wisdom.css
@@ -31,10 +31,12 @@
 
 .section01 .section-text {
     line-height: 1.8;
+    letter-spacing: -1.5px;
 }
 
 .section01 .section-text:first-child {
     margin-bottom: 7px;
+    letter-spacing: -1.5px;
 }
 
 .section01 .image_box_left {
@@ -123,7 +125,7 @@
 
 .section03 .image_box_right {
     max-width: 1276px;
-    height: 422px;
+    height: 394px;
     width: 50%;
     z-index: 10;
 }
@@ -136,7 +138,7 @@
     padding-top: 86px;
     position: relative;
     line-height: 1.3;
-    margin-bottom: 115px;
+    margin-bottom: 101px;
     padding-left: 94px;
     letter-spacing: -1px;
 }
@@ -171,9 +173,9 @@
     background: #f5f5f5;
     width: 64.65%;
     position: absolute;
-    height: 242px;
+    height: 199px;
     left: 0px;
-    bottom: -67px;
+    bottom: -56px;
 }
 
 .section03 .max-layout-width {
@@ -216,7 +218,7 @@
 }
 
 .section04 {
-    margin-top: 149px;
+    margin-top: 135px;
     text-align: center;
     margin-bottom: 92px;
 }
