--- a/src/main/webapp/css/orthodontics/growthReriodOrthodontics.css
+++ b/src/main/webapp/css/orthodontics/growthReriodOrthodontics.css
@@ -169,7 +169,7 @@
 }
 
 .section04 {
-    margin-top: 47px;
+    margin-top: 77px;
 }
 
 .section04 .max-layout-width .text {
@@ -349,36 +349,43 @@
 }
 
 .section03 {
-    margin-top: 112px;
+    margin-top: 111px;
+    padding: 64px 0;
+    background: #9b8b7e;
 }
 
 .section03 .section-title {
     line-height: 1.3;
-    /* margin-bottom: 20px; */
+    margin-bottom: -7px;
     text-align: center;
+    color: #fff;
 }
 
 .section03 .section-text {
     line-height: 1.7;
     word-break: keep-all;
-    margin-bottom: 42px;
+    margin-bottom: 45px;
     text-align: center;
+    color: #fff;
 }
 
 .section03 ul {
     overflow: hidden;
-    margin-left: -3%;
+    margin-left: 0;
+    width: 1000px;
+    margin: 0 auto;
 }
 
 .section03 ul li {
-    width: 47%;
-    margin-left: 3%;
+    width: 25%;
     float: left;
+    text-align: center;
 }
 
 .section03 ul li img {
     width: 100%;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
+    max-width: 146px;
 }
 
 .section03 ul li p {
@@ -386,9 +393,10 @@
     font-weight: bold;
     font-size: 16px;
     line-height: 1.5;
-    margin-bottom: 30px;
+    color: #fff;
+    letter-spacing: -1px;
 }
 
 .section07 {
-    margin-top: 150px;
+    margin-top: 141px;
 }
